--- a/style.css
+++ b/style.css
@@ -1,3 +1,31 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 #header {
-    text-align: center;
+    position: absolute;
+    left: 50%;
+    top: 20px;
+    transform: translate(-50%, -50%);
+}
+
+#grid-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 500px;
+    width: 500px;
+    background-color: rebeccapurple;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.grid {
+    background-color: gray;
+    border: 5px solid green;
+    height: 100px;
+    width: 100px;
 }
